--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ node_js:
 cache: npm
 branches:
   only:
-    - master # build master branch only
+    - source # build source branch only
 script:
   - hexo generate # generate static files
 deploy:
@@ -15,6 +15,7 @@ deploy:
   skip-cleanup: true
   github-token: $GH_TOKEN
   keep-history: true
+  target_branch: master
   on:
-    branch: master
+    branch: source
   local-dir: public
