--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Sahara 小分队
+title: Sahara Team Blog
 subtitle: '生命不息，折腾不止'
 description: ''
 keywords:
-author: Sahara 小分队
+author: Sahara Team
 language: zh-CN
 timezone: 'Asia/Shanghai'
 
